--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -5,4 +5,8 @@
         <attr name="count" format="integer" />
         <attr name="timeout" format="integer" />
     </declare-styleable>
+    <declare-styleable name="ToolLineProgress">
+        <attr name="line_color" format="color" />
+        <attr name="line_count" format="integer" />
+    </declare-styleable>
 </resources>
